# auth

./: .coderabbit.yaml  .deepsource.toml  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  Shuttle.toml  bacon.toml  railway.toml  sample.Rocket.toml  sample.Secrets.dev.toml  sample.Secrets.toml  techstack.md  techstack.yml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-version-bump-apply.yml
migrations/: 20260328000001_create_oauth_credentials.down.sql  20260328000001_create_oauth_credentials.up.sql  20260328000002_create_oauth_sessions.up.sql  20260401000003_add_oauth_credential_relink_fields.down.sql  20260401000003_add_oauth_credential_relink_fields.up.sql
src/: lib.rs  main.rs  utils.rs
src/routes/: authorized.rs  catchers.rs  healthz.rs  login.rs  mod.rs  start.rs
src/utils/: consts.rs  functions.rs  guards.rs  mod.rs  observability.rs  structs.rs
