[package]
name = "auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1
debug = 2
split-debuginfo = "packed"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
nanoid = "0.4.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
sentry = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
url = "2.5.7"
