[package]
name = "annie-mei-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1
debug = 2
split-debuginfo = "packed"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
nanoid = "0.4.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
sentry = { version = "0.47.0", features = ["tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
  "chrono",
] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
url = "2.5.7"

[dev-dependencies]
wiremock = "0.6.5"
