[package]
name = "annie-mei-auth"
version = "1.0.1"
edition = "2024"
rust-version = "1.94"
publish = false

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1
debug = 2
split-debuginfo = "packed"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
blake3 = "1.8.2"
dotenvy = "0.15.7"
linkify = "0.11"
nanoid = "0.4.0"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
sentry = { version = "0.47.0", features = ["tracing", "logs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
  "chrono",
] }
hmac = "0.13"
sha2 = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
url = "2.5.7"

[dev-dependencies]
wiremock = "0.6.5"
